--- a/gb/22/12/14/n13884741.md
+++ b/gb/22/12/14/n13884741.md
@@ -23,10 +23,6 @@
 <p>除了特别组的选手之外，嘉义市代表队也派出13位一般组的选手，以二年多的时间，就能在亚洲大赛上与多位好手竞争，获得2银、1铜、7铁，嘉义市代表队正以坚毅的好表现，记录属于他们自己的色彩。</p>
 <p>林立生处长也特别说，嘉义市代表队中，有许多有具有生命故事的选手，嘉义市以竞技叠杯作为带领特教孩子走出嘉义市的媒介，透过参与高规格、高强度的赛事，为特教孩子搭起舞台，让孩子在舞台上可以谱写精彩的生命故事。更感谢黄敏惠市长将适应体育融合运动作为施政重点。每个坚毅不放弃的身影，以他们的努力和坚毅，写下属于自己精彩的运动生命故事。</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/12/n13499419.md#1">嘉市育人国小陈怀恩 获适应体育征文首奖</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/7/n13560455.md#1">嘉市停课不停学 学习百宝盒助特生居家学习</a></li>
@@ -35,40 +31,28 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/26/n13810787.md#1">台塑企业联手长庚科技大学、长庚医院 守护长者健康</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/7/n13880281.md#1">13岁颅颜缺陷患者展自我 将出战竞技叠杯亚洲赛</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883163.md#1">《看见改变》摄影展 颅颜患者面对伤痕展现美丽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926246.md#1">云林家扶展力学子 踏出户外展现自我能力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926236.md#1">迎接开学日 嘉义市校园全面整备 防疫不松懈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926287.md#1">忠训国际、美伦国际兰馨交流协会 携手捐云林复康巴士</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/14/n13884647.md#1">大业国中第51届校庆暨首届实验教育峰会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/14/n13884600.md#1">惊见猎杀濒危台湾黑熊 屏东县长：强力谴责</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/14/n13884639.md#1">比特犬禁养上路 屏县府吁速登记绝育以免受罚</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918315.md#1">【百年真相】活活饿死数十万人 长春围困战内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921879.md#1">楚一丁：北美沙漠上不死的自由中国魂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921256.md#1">元宵节俗：一颗元宵汤圆承载的历史超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925785.md#1">【江峰漫谈】拜登演讲六提中共威胁 透视美战略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926152.md#1">【全球新闻】一只气球好大坑？ 中共计划浮出水面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925779.md#1">【热点互动】不提气球 拜登点名习近平是何意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924854.md#1">组图：美军方公布中共间谍气球残骸照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924607.md#1">岳山：陈文清泄习近平心病 两会现权斗暗涌？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924304.md#1">首架国产C919被爆出故障 东航绝口不提</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924832.md#1">从中国回土国探亲 男星唐小强遭强震埋入废墟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924881.md#1">“伦敦影评人协会奖”封后 凯特?布兰琪胜杨紫琼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924453.md#1">美国81岁医生力行7件事 让大脑灵光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919486.md#1">炎症生百病 5种天然消炎药帮你抗发炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923905.md#1">盐水蜂炮名列全球10大庆典 起源竟跟瘟疫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920006.md#1">筋膜好好的怎会出状况？注意八大祸首（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/14/n13884741.htm">嘉市竞技叠杯队亚洲锦标赛荣获7金6银7铜</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/14/n13884741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
